# immudb_syslog

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/immudb_syslog/: __init__.py  __main__.py  config.toml  immudbhandler.py  logutil.py  reader.py  server.py
